# tomoe

./: .gitignore  README.md  pyproject.toml
doc/: README.md  human_review_workflow.md
docs/: CURRENT_PLAN.md
example/: eval_template.md  modify_template.md  persistence_template.md  redteam_template.md  synthesis_template.md  tomoe.toml
issues/: eval_template.md  modify_template.md
src/: pdca_loop.py  tomoe.py
test_template/: eval_template.md  modify_template.md
tests/: test_pdca_loop.py
