[project]
name = "tomoe"
version = "0.1.0"
description = "LLM-driven evaluate/modify/execute improvement loop CLI."
readme = "doc/README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tomoe = "tomoe:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["tomoe", "pdca_loop"]

[tool.pytest.ini_options]
pythonpath = ["src"]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
